--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "graphql": "^15.4.0",
         "graphql-tag": "^2.11.0",
         "ng2-charts": "^2.4.2",
+        "ngx-editor": "^8.1.0",
         "ngx-image-zoom": "^0.6.0",
         "rxjs": "~6.6.0",
         "three": "^0.122.0",
